--- a/src/aboutHainanFotoFull.html
+++ b/src/aboutHainanFotoFull.html
@@ -125,6 +125,7 @@
                 <div class="gallery-item"><img src="images/gal5.jpg" alt="Фото" width="290" height="215"></div>
                 <div class="gallery-item"><img src="images/gal6.jpg" alt="Фото" width="290" height="215"></div>
               </div>
+              <div class="aboutHainanFotoFull-back-btn"><a class="back-btn" href="#"><span>Возврат к списку</span></a></div>
             </div>
           </section>
           <section class="block-events">
