--- a/src/contestTsigunWoman.html
+++ b/src/contestTsigunWoman.html
@@ -145,6 +145,7 @@
               <div class="skills"><span>Артистические навыки: </span> Handicrafts, photography, dance, floristics</div>
               <div class="nav-buttons">
                 <div class="nav-button"><a class="next-btn btn" href="#"><span>Следующая учатница</span></a></div>
+                <div class="nav-button"><a class="prev-btn btn" href="#"><span>Предыдущая учатница</span></a></div>
                 <div class="nav-button"><a class="back-btn btn" href="#"><span>Назад к списку участниц</span></a></div>
               </div>
             </div>
