--- a/src/contributorList.html
+++ b/src/contributorList.html
@@ -142,7 +142,7 @@
                     </div>
                   </div>
                   <div class="ratings-month">
-                    <div class="ratings-title title">Рейтинг</div>
+                    <div class="ratings-title title">За месяц</div>
                     <div class="ratings-num">0</div>
                     <div class="ratings-items">
                       <div class="item"><img src="images/rating-icon1.png" alt="Рейтинг" width="13" height="13"></div>
@@ -178,7 +178,7 @@
                     </div>
                   </div>
                   <div class="ratings-month">
-                    <div class="ratings-title title">Рейтинг</div>
+                    <div class="ratings-title title">За месяц</div>
                     <div class="ratings-num">0</div>
                     <div class="ratings-items">
                       <div class="item"><img src="images/rating-icon2.png" alt="Рейтинг" width="13" height="13"></div>
@@ -210,7 +210,7 @@
                     </div>
                   </div>
                   <div class="ratings-month">
-                    <div class="ratings-title title">Рейтинг</div>
+                    <div class="ratings-title title">За месяц</div>
                     <div class="ratings-num">0</div>
                     <div class="ratings-items">
                       <div class="item"><img src="images/rating-icon2.png" alt="Рейтинг" width="13" height="13"></div>
@@ -242,7 +242,7 @@
                     </div>
                   </div>
                   <div class="ratings-month">
-                    <div class="ratings-title title">Рейтинг</div>
+                    <div class="ratings-title title">За месяц</div>
                     <div class="ratings-num">0</div>
                     <div class="ratings-items">
                       <div class="item"><img src="images/rating-icon2.png" alt="Рейтинг" width="13" height="13"></div>
@@ -274,7 +274,7 @@
                     </div>
                   </div>
                   <div class="ratings-month">
-                    <div class="ratings-title title">Рейтинг</div>
+                    <div class="ratings-title title">За месяц</div>
                     <div class="ratings-num">0</div>
                     <div class="ratings-items">
                       <div class="item"><img src="images/rating-icon2.png" alt="Рейтинг" width="13" height="13"></div>
@@ -306,7 +306,7 @@
                     </div>
                   </div>
                   <div class="ratings-month">
-                    <div class="ratings-title title">Рейтинг</div>
+                    <div class="ratings-title title">За месяц</div>
                     <div class="ratings-num">0</div>
                     <div class="ratings-items">
                       <div class="item"><img src="images/rating-icon2.png" alt="Рейтинг" width="13" height="13"></div>
@@ -338,7 +338,7 @@
                     </div>
                   </div>
                   <div class="ratings-month">
-                    <div class="ratings-title title">Рейтинг</div>
+                    <div class="ratings-title title">За месяц</div>
                     <div class="ratings-num">0</div>
                     <div class="ratings-items">
                       <div class="item"><img src="images/rating-icon2.png" alt="Рейтинг" width="13" height="13"></div>
@@ -370,7 +370,7 @@
                     </div>
                   </div>
                   <div class="ratings-month">
-                    <div class="ratings-title title">Рейтинг</div>
+                    <div class="ratings-title title">За месяц</div>
                     <div class="ratings-num">0</div>
                     <div class="ratings-items">
                       <div class="item"><img src="images/rating-icon2.png" alt="Рейтинг" width="13" height="13"></div>
@@ -402,7 +402,7 @@
                     </div>
                   </div>
                   <div class="ratings-month">
-                    <div class="ratings-title title">Рейтинг</div>
+                    <div class="ratings-title title">За месяц</div>
                     <div class="ratings-num">0</div>
                     <div class="ratings-items">
                       <div class="item"><img src="images/rating-icon2.png" alt="Рейтинг" width="13" height="13"></div>
@@ -434,7 +434,7 @@
                     </div>
                   </div>
                   <div class="ratings-month">
-                    <div class="ratings-title title">Рейтинг</div>
+                    <div class="ratings-title title">За месяц</div>
                     <div class="ratings-num">0</div>
                     <div class="ratings-items">
                       <div class="item"><img src="images/rating-icon2.png" alt="Рейтинг" width="13" height="13"></div>
@@ -466,7 +466,7 @@
                     </div>
                   </div>
                   <div class="ratings-month">
-                    <div class="ratings-title title">Рейтинг</div>
+                    <div class="ratings-title title">За месяц</div>
                     <div class="ratings-num">0</div>
                     <div class="ratings-items">
                       <div class="item"><img src="images/rating-icon2.png" alt="Рейтинг" width="13" height="13"></div>
