--- a/src/dating.html
+++ b/src/dating.html
@@ -218,6 +218,46 @@
                     <div class="premium-flag"></div>
                   </div></a></div>
             </div>
+            <div class="dating-new-questionnaires">
+              <h3 class="new-questionnaires-title title"><span>Новые </span>лица</h3>
+              <div class="new-users"><a class="new-user" href="#">
+                  <div class="photo"><img src="images/dating-man.jpg" alt="Фотография" width="290" height="362"></div>
+                  <div class="status">Ищу друзей для переписки</div>
+                  <div class="info">
+                    <div class="online">Не в сети</div>
+                    <div class="name">Макс Дойч </div>
+                    <div class="location">Хайнань</div>
+                    <div class="verified-flag"></div>
+                    <div class="premium-flag"></div>
+                  </div></a><a class="new-user" href="#">
+                  <div class="photo"><img src="images/dating-woman.jpg" alt="Фотография" width="290" height="362"></div>
+                  <div class="status">Ищу друзей для переписки</div>
+                  <div class="info">
+                    <div class="online">Не в сети</div>
+                    <div class="name">Анастасия Смирнова</div>
+                    <div class="location">Хайнань</div>
+                    <div class="verified-flag"></div>
+                    <div class="premium-flag"></div>
+                  </div></a><a class="new-user" href="#">
+                  <div class="photo"><img src="images/dating-man.jpg" alt="Фотография" width="290" height="362"></div>
+                  <div class="status">Ищу друзей для переписки</div>
+                  <div class="info">
+                    <div class="online">Не в сети</div>
+                    <div class="name">Макс Дойч </div>
+                    <div class="location">Хайнань</div>
+                    <div class="verified-flag"></div>
+                    <div class="premium-flag"></div>
+                  </div></a><a class="new-user" href="#">
+                  <div class="photo"><img src="images/dating-woman.jpg" alt="Фотография" width="290" height="362"></div>
+                  <div class="status">Ищу друзей для переписки</div>
+                  <div class="info">
+                    <div class="online">Не в сети</div>
+                    <div class="name">Анастасия Смирнова</div>
+                    <div class="location">Хайнань</div>
+                    <div class="verified-flag"></div>
+                    <div class="premium-flag"></div>
+                  </div></a></div>
+            </div>
           </section>
           <section class="block-events">
             <h3 class="events-title title"><span>События </span></h3>
