--- a/src/datingMyPage.html
+++ b/src/datingMyPage.html
@@ -178,15 +178,16 @@
                 </form>
               </div>
             </div>
-            <div class="mypagage">
-              <div class="mypagage-top">
-                <div class="mypagage-image"><img src="images/mypage-sample.jpg" alt="Фотография" width="290" height="247"></div>
-                <div class="online"><span>Не в сети</span></div>
+            <div class="mypage">
+              <div class="mypage-top">
+                <div class="mypage-image"><img src="images/mypage-sample.jpg" alt="Фотография" width="290" height="247"></div>
+                <div class="online"><span>Не в сети</span>
+                  <div class="verified-flag"></div>
+                  <div class="premium-flag"></div>
+                </div>
                 <div class="info"><span class="age"><span>36 </span>лет </span><span class="photo-nbr">1 фото</span></div>
-                <div class="verified-flag"></div>
-                <div class="premium-flag"></div>
-              </div><a class="send-message" href="#">Написать сообщение</a>
-              <div class="mypagage-info">
+              </div><a class="add-album" href="#"><span>Добавить альбом</span></a>
+              <div class="mypage-info">
                 <div class="name">Макс Дойч</div>
                 <div class="status">Ищу друзей для переписки</div>
                 <div class="sex"><span>Пол: </span>Мужской </div>
@@ -196,15 +197,15 @@
                 <div class="location"><span>Местонахождение: </span>Хайнань</div>
                 <div class="zodiac"><span>Знак зодиака: </span>Лев</div>
                 <div class="language"><span>Язык общения: </span>Английский </div>
-                <div class="mypagage-wrp"><span class="eyes">Цвет глаз: </span><span class="hair">Цвет волос: </span></div>
+                <div class="mypage-wrp"><span class="eyes">Цвет глаз: </span><span class="hair">Цвет волос: </span></div>
                 <div class="growth"><span>Рост: </span>188 см </div>
               </div>
-              <div class="mypagage-album">
+              <div class="mypage-album">
                 <div class="title">Альбомы пользователя</div>
                 <div class="description">Это я </div>
                 <div class="date">8 мая 2015</div><a class="photo" href="#"><img src="images/mypage-sample2.jpg" alt="Фотография" width="290" height="290"><span class="all"><span>1</span><br>фото</span></a>
               </div>
-              <div class="mypagage-edit"><a href="#"><span>Редактировать</span></a></div>
+              <div class="mypage-edit"><a href="#"><span>Редактировать</span></a></div>
             </div>
           </section>
           <section class="block-events">
