--- a/src/datingQuestionnaire.html
+++ b/src/datingQuestionnaire.html
@@ -181,10 +181,11 @@
             <div class="questionnaire">
               <div class="questionnaire-top">
                 <div class="questionnaire-image"><img src="images/questionnaire-man2.jpg" alt="Фотография" width="290" height="247"></div>
-                <div class="online"><span>Не в сети</span></div>
+                <div class="online"><span>Не в сети</span>
+                  <div class="verified-flag"></div>
+                  <div class="premium-flag"></div>
+                </div>
                 <div class="info"><span class="age"><span>36 </span>лет </span><span class="photo-nbr">1 фото</span></div>
-                <div class="verified-flag"></div>
-                <div class="premium-flag"></div>
               </div><a class="send-message" href="#">Написать сообщение</a>
               <div class="questionnaire-info">
                 <div class="name">Макс Дойч</div>
