added new search

--- a/src/dating.html
+++ b/src/dating.html
@@ -290,7 +290,7 @@
                       <label for="online">Только онлайн</label>
                     </div>
                   </div>
-                  <button class="search-btn" type="submit" name="search-btn">Найти</button><a class="ex-search" href="#">Расширенный поиск</a>
+                  <button class="search-btn" type="submit" name="search-btn">Найти</button><a class="ex-search" href="#">Быстрый поиск</a>
                 </form>
               </div>
             </div>
