--- a/src/aboutHainanFotoFull.html
+++ b/src/aboutHainanFotoFull.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/jquery-ui/jquery-ui.min.css">
+    <link rel="stylesheet" href="js/vendor/fancybox/jquery.fancybox.css">
     <link rel="stylesheet" href="css/slick.js/slick.css">
     <link rel="stylesheet" href="css/slick.js/slick-theme.css">
     <link rel="stylesheet" href="css/css3.css">
@@ -19,6 +20,7 @@
     <script src="js/vendor/jquery-3.2.0.min.js"></script>
     <script src="js/vendor/jquery-migrate-1.4.1.min.js"></script>
     <script src="js/vendor/jquery.form.min.js"></script>
+    <script src="js/vendor/fancybox/jquery.fancybox.pack.js"></script>
     <script src="js/vendor/jquery-ui/jquery-ui.min.js"></script>
     <script src="js/vendor/jquery-ui/jquery.ui.datepicker-ru.js"></script>
     <script src="js/vendor/fancybox/jquery.fancybox.pack.js"></script>
@@ -117,14 +119,7 @@
                 </div>
               </div>
               <div class="aboutHainanFotoFull-description">Неповторимая Anna Tyab специально для Hainanlife.</div>
-              <div class="aboutHainanFotoFull-gallery">
-                <div class="gallery-item"><img src="images/gal1.jpg" alt="Фото" width="290" height="215"></div>
-                <div class="gallery-item"><img src="images/gal2.jpg" alt="Фото" width="290" height="215"></div>
-                <div class="gallery-item"><img src="images/gal3.jpg" alt="Фото" width="290" height="215"></div>
-                <div class="gallery-item"><img src="images/gal4.jpg" alt="Фото" width="290" height="215"></div>
-                <div class="gallery-item"><img src="images/gal5.jpg" alt="Фото" width="290" height="215"></div>
-                <div class="gallery-item"><img src="images/gal6.jpg" alt="Фото" width="290" height="215"></div>
-              </div>
+              <div class="aboutHainanFotoFull-gallery"><a class="gallery-item" href="images/gal1.jpg"><img src="images/gal1.jpg" alt="Фото" width="290" height="215"></a><a class="gallery-item" href="images/gal2.jpg"><img src="images/gal2.jpg" alt="Фото" width="290" height="215"></a><a class="gallery-item" href="images/gal3.jpg"><img src="images/gal3.jpg" alt="Фото" width="290" height="215"></a><a class="gallery-item" href="images/gal4.jpg"><img src="images/gal4.jpg" alt="Фото" width="290" height="215"></a><a class="gallery-item" href="images/gal5.jpg"><img src="images/gal5.jpg" alt="Фото" width="290" height="215"></a><a class="gallery-item" href="images/gal6.jpg"><img src="images/gal6.jpg" alt="Фото" width="290" height="215"></a></div>
               <div class="aboutHainanFotoFull-back-btn"><a class="back-btn" href="#"><span>Возврат к списку</span></a></div>
             </div>
           </section>
