--- a/src/contestTsigun.html
+++ b/src/contestTsigun.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/jquery-ui/jquery-ui.min.css">
+    <link rel="stylesheet" href="js/vendor/fancybox/jquery.fancybox.css">
     <link rel="stylesheet" href="css/slick.js/slick.css">
     <link rel="stylesheet" href="css/slick.js/slick-theme.css">
     <link rel="stylesheet" href="css/css3.css">
@@ -19,6 +20,7 @@
     <script src="js/vendor/jquery-3.2.0.min.js"></script>
     <script src="js/vendor/jquery-migrate-1.4.1.min.js"></script>
     <script src="js/vendor/jquery.form.min.js"></script>
+    <script src="js/vendor/fancybox/jquery.fancybox.pack.js"></script>
     <script src="js/vendor/jquery-ui/jquery-ui.min.js"></script>
     <script src="js/vendor/jquery-ui/jquery.ui.datepicker-ru.js"></script>
     <script src="js/vendor/fancybox/jquery.fancybox.pack.js"></script>
@@ -189,9 +191,7 @@
                     </div>
                   </div>
                 </div></a>
-              <div class="show-all">
-                <div class="show-all-btn">Все участницы</div>
-              </div>
+              <div class="show-all"><a class="show-all-btn" href="#">Все участницы</a></div>
             </div>
             <div class="contestTsigun-items men">
               <div class="items-title-wrp">
